JSR 292: SA-JDI can't read MH/MT/Indy ConstantPool entries

XMLWordPrintable

    • b02
    • generic
    • generic
    • Not verified

        SA-JDI throws the following exception when trying to get method locals after attaching to a class with JSR292 constant pool entries:

        # ERROR: sun.jvm.hotspot.utilities.AssertionFailure: invalid cp index 5120 248
        # ERROR: at sun.jvm.hotspot.utilities.Assert.that(Assert.java:32)
        # ERROR: at sun.jvm.hotspot.oops.ConstantPool.indexOffset(ConstantPool.java:104)
        # ERROR: at sun.jvm.hotspot.oops.ConstantPool.getIntAt(ConstantPool.java:122)
        # ERROR: at sun.jvm.hotspot.oops.ConstantPool.getNameAndTypeAt(ConstantPool.java:170)
        # ERROR: at sun.jvm.hotspot.oops.ConstantPool.getSignatureRefIndexAt(ConstantPool.java:245)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.doMethod(GenerateOopMap.java:1733)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.interp1(GenerateOopMap.java:1383)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.interpBB(GenerateOopMap.java:802)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.interpAll(GenerateOopMap.java:1107)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.doInterpretation(GenerateOopMap.java:980)
        # ERROR: at sun.jvm.hotspot.oops.GenerateOopMap.computeMap(GenerateOopMap.java:2208)
        # ERROR: at sun.jvm.hotspot.interpreter.OopMapForCacheEntry.computeMap(OopMapForCacheEntry.java:80)
        # ERROR: at sun.jvm.hotspot.interpreter.OopMapCacheEntry.fill(OopMapCacheEntry.java:53)
        # ERROR: at sun.jvm.hotspot.oops.Method.getMaskFor(Method.java:239)
        # ERROR: at sun.jvm.hotspot.runtime.InterpretedVFrame.getLocals(InterpretedVFrame.java:53)
        # ERROR: at sun.jvm.hotspot.jdi.StackFrameImpl.getValues(StackFrameImpl.java:189)

              Assignee:
              Tom Rodriguez
              Reporter:
              Kirill Shirokov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: