7012081: JSR 292: SA-JDI can't read MH/MT/Indy ConstantPool entries

Reviewed-by: kvn, twisti, jrose